--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -96,8 +96,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%% RAUL
 
 \newcommand{\e}[1]{\ensuremath{\mbox{$10^{#1}$}}\xspace}
-\newcommand{\E}[1]{\ensuremath{\mbox{$10^{#1}$}} \eV\xspace}
-\newcommand{\appE}[1]{\ensuremath{\mbox{$\approx 10^{#1}$}} \eV\xspace}
+\newcommand{\E}[1]{\ensuremath{\mbox{$10^{#1}\;\eV$}}\xspace}
+\newcommand{\appE}[1]{\ensuremath{\mbox{$\approx 10^{#1}\;\eV$}}\xspace}
 \newcommand{\dg}[1]{\ensuremath{\mbox{#1$^\circ$}}\xspace}
 
 
@@ -109,6 +109,22 @@
 \newcommand{\xmumax}{\ensuremath{\mbox{$X^\mu_\text{max}$}}\xspace}
 \newcommand{\xmumaxmean}{\ensuremath{\mbox{$\langle X^\mu_\text{max}\rangle$}}\xspace}
 \newcommand{\dEdX}{\ensuremath{\mbox{\text{d}$E$/\text{d}$X$}}\xspace}
+
+%%INTERPRETATION
+\def \lgnmu {$ \log_{10}N_{\mu}$\xspace}
+\def \lgnmumean {$\langle \log _{10}N_{\mu} \rangle$\xspace}
+\def \lgnmurms {$\sigma[\log _{10}N_{\mu}]$\xspace}
+\def \cchi{$\chi^2$\xspace}
+\def \chialpha{$\chi^2(\alpha)$\xspace}
+\def \chibeta{$\chi^2(\beta)$\xspace}
+\def \chimin{$\chi^2_\text{min}$\xspace}
+\def \chiminalpha{$\chi^2_\text{min}(a)$\xspace}
+\def \chiminbeta{$\chi^2_\text{min}(b)$\xspace}
+
+%%OBSERVABLE
+\def \rmu{$r_{\mu}$\xspace}
+\def \rmumean{$\langle r_{\mu} \rangle$\xspace}
+\def \dx{$DX$\xspace}
 
 
 \def \pions{$\pi^\pm$\xspace}
