--- a/conclusions.tex
+++ b/conclusions.tex
@@ -1,2 +1,130 @@
-\chapter[Conclusions]{Conclusions}
+\chapter[Summary]{Summary}
 \label{sec:conclusions}
+
+In this thesis the muon deficit problem was approached by three different fronts.
+In~\cref{sec:interpretation,sec:observable} we presented simulation studies aiming
+the development of methods to be applied in the analysis of measurements of
+future experiments with the presence of muon detectors, which includes AugerPrime.
+In~\cref{sec:hadron} we presented the measurements of hadron production spectra
+in pion-carbon interactions by \NASixtyOne experiment. The importance of these type
+of interaction for muon production in air showers were pointed
+out in~\cref{sec:showers:phen:had}. \newline
+
+The main idea of the method presented in~\cref{sec:interpretation}
+is to explore the energy evolution of the moments of the \nmu
+to interpret the measurements in terms of composition in despite
+of the \nmu misprediction by the simulations. The first step of the method
+is the development of a model to describe the energy and the primary mass evolution
+of the moments of \lgnmu (\lgnmumean and \lgnmurms)
+which capture the common behavior to the simulations with different
+hadronic interaction models (Sec. 2 of \cref{sec:interpretation}).
+This model also contains free parameters that represent
+the features which are discrepant with relation to the models ($\alpha$ and $\beta$).
+Second step is the selection of a set of composition scenarios that can be
+motivated by astrophysical models or by the measurements of other observables, like \xmax.
+These scenarios should predict the energy evolution of the abundance of different
+groups of primaries (Sec. 4 of \cref{sec:interpretation}).
+The next and final step is to compare the measurements of \lgnmumean and \lgnmurms
+with the prediction of the model considering different composition scenarios. The comparison
+is performed by a \cchi parameter for \lgnmumean and \lgnmurms separately an the free parameters of the model
+are used then to minimize the \cchi. The minimum values of the \cchi (\chiminalpha and \chiminbeta)
+can be compared for different composition scenarios and the true scenario can be identified by the smallest
+values (Sec. 5 of \cref{sec:interpretation}).
+
+To illustrate and test the method, a large set of simulated showers were used.
+Two simulation codes were applied, \Conex and \Corsika. An algorithm to convert
+the \nmu from \Conex, which counts all the muons at ground above 1 \GeV, to the
+one that takes into account a limited lateral distance range (between 500 and 2000 m)
+and a different muon energy threshold of 0.2 \GeV,
+was developed by using \Corsika showers to parametrize their relation
+(Sec. 3 of \cref{sec:interpretation}).
+
+A consistency test of the method was performed by using these large simulation set.
+As a result, it was shown that the method can provide a very efficient identification
+of the true composition scenario. The muon deficit problem was considered by testing
+the method using simulations in which the \nmu was artificially scaled by a given
+factor. Furthermore, the uncertainties due to the energy scale were also considered
+by scaling the shower energies in the simulations. The result of the method was shown
+to be stable under these both tests (Sec. 5 of \cref{sec:interpretation}). \newline
+
+In the analysis presented in~\cref{sec:observable}, a set of \Corsika simulations
+were first used to characterize the muon energy spectrum at ground and to study
+its dependencies on the energy and primary mass of the primary and on the hadronic
+interaction model. It was observed that the most relevant feature of
+the muon energy spectrum at ground to discriminate between hadronic models
+is given by its mode parameter ($\eta$), which evolves strongly with the \dx of the shower.
+Next step was the proposal of a new observable (\rmu) which correlates with $\eta$ and which
+can be measured by an experimental setup including two types of muon detectors,
+one at the surface and one buried few meters below the ground. These two types of detectors
+were based on th designed of the AugerPrime detectors.
+
+By using \Corsika simulations it was possible to test the applicability of \rmu measurements
+under realistic experimental conditions. For that, it was considered an array of the area
+of Auger infill and the experimental resolution on the measurements of the muon signal
+were considered based on simulation studies from the literature.
+As a final result, it was shown that the evaluation of the measured \rmumean as a function of \dx
+can be efficiently used to constrain hadronic interaction models. \newline
+
+
+The last part of this thesis, presented in~\cref{sec:hadron},
+contains the measurements of hadron production spectra in pion-carbon
+interactions by by \NASixtyOne experiment. The main steps of the analysis
+are the event selections, particle identification, Monte Carlo correction and
+the computation of the spectra. The particle identification step was done separately
+for charged hadrons, by means of the fit of the \dedx distributions, and for
+\vzero particles, by means of the signal extraction from the \minv spectra.
+
+The final results include the production spectra of \pions, \kaons, \protons, \lambs and \kzeros
+at two collision energies, 158 and 350 \GeV. The spectra of \protons are of particular interest
+for muon production in air showers since one of the hypothesis to explain the muon deficit problem
+is that the current hadronic interaction models under-produce (anti)baryon in hadron-air interaction.
+From our results, it can be seen that a few current models actually predict well the \proton spectra,
+which is an indication that the underproduction of (anti)baryons is not the reason of the
+muon deficit problem. However, the strongest impact of our hadron production measurements
+on the muon production in air shower by simulations will be seen by the performance of the next
+generation of hadronic interaction models.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
