--- a/introduction.tex
+++ b/introduction.tex
@@ -1,66 +1,117 @@
 \chapter[Introduction]{Introduction}
 \label{sec:introduction}
 
-The Earth is constantly being reached by charged particles
-coming from extraterrestrial sources, which are called Cosmic Rays.
-For over a century, the study of these particles have been a very active field
-that integrates aspects from both particle physics and astrophysics.
-The extremelly wide energy range covered by the well know cosmic rays
-energy spectrum make clear that a number of different astrophysical phenomena,
-at distinct scales, are contributing to the production of these particles.
+The study of cosmic rays has been a very active field since the discovery
+of these particles by Victor Hess, in 1912~\cite{Hess1912}.
+Before the first accelerators were built during the 1950's,
+the only way to study elementary particle physics was through the
+detection of particles produced by cosmic ray interactions.
+The discovery of positrons, muons and pions
+are examples of the importance of cosmic rays for the development
+of the particle physics field. 
+One of the most striking events of the history of cosmic rays
+was the discovery of Extensive Air Showers (EAS) by Pierre Auger,
+in 1938~\cite{Auger1938}. By measuring coincidences on the time of signals
+from detectors separated in space,
+he could confirm the hypothesis that cosmic ray particles can interact
+with atmospheric nuclei and start a cascade of secondary particles that
+can eventually reach the ground. After Auger's discovery, the idea
+of measuring the properties of cosmic rays through the detection of EAS
+with arrays of particle detectors at ground became a central concept for
+the experimental cosmic rays studies.
 
-Of particular interest is the ultra-high energy range that includes
-particles from $E=\E{17}$ up the end of the spectrum at $\sim\E{20.5}$. 
-Althought the existence of these ultra-high energy particles is known
-since the 1960's, due to detections done by Haverah Park experiment,
-the precise measurements of their energy spectra and other features
-became possible after the 1990's, with the experiments Fly's Eyes,
-HiRes and AGASA. During the last decade, two modern experiments have
-been running at the ultra-high energy range, Pierre Auger Observatory
-and Telescope Array. 
-Even though a large number of important results have been provided
-by these experiments lately, the main question about the origin
-of ultra-high energy cosmic rays are still unsolved. 
-Apart from knowing the astrophysical sources and the acceleration
-mechanisms, it is also unclear what is the exact nature of two evident structures
-observed in the ultra-high energy spectrum, the \emph{ankle} and the \emph{suppression}.
+The advance of techniques to detect EAS and the construction
+of larger and larger detector arrays allowed us to extend
+cosmic ray studies up to the very high energy regions, in which
+the flux of particles is very low. Currently, the cosmic ray
+energy spectrum (its flux as a function of energy) is well known
+from \e{9} up to \E{21}. Although this spectrum presents a power-law shape,
+a number of features can be observed, which motivate the investigation
+of the astrophysical phenomena that originated them.
+The main interest of this thesis is on the Ultra-High Energy Cosmic Rays (UHECR)
+region ($E>\E{17}$), where two spectrum features are observed: the \emph{ankle},
+which is a softening of the flux around $4\times\E{18}$ and the \emph{suppression},
+which is an abrupt reduction of the flux above $4\times\E{19}$.
+Most questions about the nature of these UHECR are still opened,
+and in particular, the actual nature of the ankle and the suppression is still
+a matter of discussions.
+Measuring the properties of UHECR is the main goal of the largest
+cosmic ray experiment even built, the Pierre Auger Observatory,
+located in Malargue, Argentina, and operating since 2004~\cite{\AugerPaper}.
+While its large collecting area (3000 km$^2$) guarantee a large
+event statistics, its hybrid detection system which includes
+surface detectors and fluorescence telescopes can provide a
+precise measurements of the properties of the EAS.
+An overview of the current status of the UHECR field
+and a brief introduction of the Pierre Auger Observatory
+will be given in~\cref{sec:uhecr} of this thesis. 
+
+The precise inference of the properties of UHECR
+from EAS measurements requires a good understanding
+of these objects. Because of their complexity,
+Monte Carlo simulation codes are used to describe them
+with the required precision. Among the possible sources
+of theoretical uncertainties related to the
+simulation of EAS, the main one is the modeling
+of the hadronic interactions, which is done
+by means of the so-called \emph{hadronic interaction models}. 
+Because of their phenomenological approaches,
+these models need to be tuned by using accelerator measurements
+and a number of problems with this process originate a substantial
+uncertainty on the predictions of the EAS properties by simulations.
+An overview of the EAS physics and simulations is given
+in~\cref{sec:showers}
+
+The relevance of EAS simulations comes mostly from the fact that
+some properties of UHECR, including the mass composition,
+can only be inferred by the comparison of EAS measurements
+to the predictions from simulations.
+The most reliable composition analysis at the UHECR regime
+are based on the shower maximum parameter (\xmax) which is defined
+at the atmospheric depth at which the shower reaches the maximum
+number of particles. Apart from the \xmax, shower parameters related
+to the muonic component of the showers are also sensitive to
+the cosmic ray composition, the most common one being the number
+of muons in the shower (\nmu). However, a number of measurements of the \nmu
+have shown that the comparison with predictions from simulations lead
+to inconsistent results. To be more precise, the \nmu observed is systematically
+larger than the ones predicted by Monte Carlo simulations using hadronic interaction
+models. Although this is traditionally known as \emph{muon deficit problem},
+further EAS measurements have shown
+that the Monte Carlo simulation with hadronic interaction models
+also fail to predict other properties of the muonic component.
+A direct consequence is that measurements of muonic observables cannot be
+properly used to infer cosmic ray composition.  
+A summary of measurements of EAS observables is also given in~\cref{sec:showers},
+including a number of manifestations of the problem with prediction of muon properties by simulations
 
 
+In this thesis, the problem of describing the properties of the muonic component of EAS
+by simulations is approached from an experimental perspective by three different fronts.
+The first one is presented in~\cref{sec:interpretation}
+where the Ref.~\cite{Prado:2016akv} is reproduced,
+consists of the development of a method to interpret the energy evolution
+of the measured \nmu moments in terms of mass composition which takes into account
+the misprediction of the \nmu by the simulations. The method is tested by using
+a set of simulations and it is expected to be applicable for the analysis
+of future measurements of the \nmu by AugerPrime or other experiments.
+Preliminary stages of this work can be found in Refs.~\cite{}.
 
+The second front is presented in~\cref{sec:observable} where
+the Ref.~\cite{Prado:2017ijs} is reproduced. The main idea is to explore the potentialities
+of using the measurements from muon detectors, similar to the ones of AugerPrime,
+to further constrain hadronic interaction models. By considering
+the operation of two distinct muon detectors, one at the surface
+and one buried a few meters below the ground, we have proposed a new observable
+that was shown to be sensitive to the properties of the energy spectrum of muons at ground.
+This observable was studied by using simulations and it can be seen that its measurements
+could provide an efficient way to constrain hadronic models.
 
-Because of the very low flux of particles at the 
-
-
-
-The compreesion of the astrophysical aspects behind the cosmic rays
-is mainly complicated by the fact that they cannot be directly measured
-at the high energy regime. Their detection is actually done by measuring
-the cascade of particles created by the interaction of the cosmic ray particle
-with atmospheric nuclei, the so called \emph{Extensive Air Showers}.  
-
-
-Thus, the properties of the primary particles have to be infered from
-
-
-The inferences of the properties of the primary cosmic ray have then
-to be done by means of the measured features of the 
-
-
-
-
-
--cosmic rays->uhe->open questions
-
--cr->showers->understanding to infer
-
--muons->muon deficit problem
-
--augerprime->chap 3 and 4->simulation studies
-
--na61->pion-air
-
-
-
-
-
-
+The third front, presented in~\cref{sec:hadron},
+is the data analysis of the fixed target experiment \NASixtyOne
+at CERN Super Proton Synchrotron~\cite{\NASixtyOnePaper},
+aiming the measurements of hadron production spectra
+in $\pi$-C interactions. These measurements are valuable for the understanding of the muon
+production in EAS (see~\cref{sec:showers}) and they are an important part of
+the cosmic ray physics programee of \NASixtyOne experiment.
+Finally, in~\cref{sec:conclusions} the summary of the thesis are presented.
