--- a/lib.bib
+++ b/lib.bib
@@ -2,6 +2,24 @@
 %%%%%%%% PAPERS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@article{Auger1938, 
+   author = {Auger, P. and others},
+   title = {Extensive cosmic-ray showers},
+   journal = {Rev.Mod.Phys.},
+   volume = {11},
+   pages = {288--291},
+   year = {1938}
+} 
+
+@article{Hess1912, 
+   author = {Hess, V.F.},
+   title = {{Über Beobachtungen der durchdringenden Strahlung bei sieben Freiballonfahrten}},
+   journal = {{Physikalische Zeitschrift}},
+   volume = {13},
+   pages = {1084--1091},
+   year = {1912}
+} 
+
 @article{AbuZayyad:2012qk,
       author         = "Abu-Zayyad, T. and others",
       title          = "{The Energy Spectrum of Telescope Array's Middle Drum
