--- a/showers.tex
+++ b/showers.tex
@@ -231,7 +231,7 @@ hadronic component of the shower.
 As lower the energy of the charged pions, larger the probability
 that they decay instead of interacting again. The dominant decay channel
 for charged pions is into muons and neutrinos
-($\pi^+\rightarrow\mu^+\nu_\mu$ and $\pi^-\rightarrow\nu^-+\bar{\nu}_\mu$)
+($\pi^+\rightarrow\mu^++\nu_\mu$ and $\pi^-\rightarrow\nu^-+\bar{\nu}_\mu$)
 and the critical energy in which the probability of decaying is
 equivalent to the probability of interacting is 85 \GeV. These decays are responsible
 to produce the great majority of the muons of an air shower.
