--- a/uhecr.tex
+++ b/uhecr.tex
@@ -30,7 +30,7 @@ in Refs.~\cite{Aloisio:2017ooo,Mollerach:2017idb}.
 \end{figure}
 
 The cosmic ray flux as a function of energy is the so-called \emph{energy spectrum}
-and it plays a central hole in the understanding of the astrophysical aspects behind these particles.
+and it plays a central role in the understanding of the astrophysical aspects behind these particles.
 A compilation of measurements of the cosmic ray
 energy spectrum over about 13 orders of magnitude
 in energy is shown in~\cref{fig:uhecr:overview:spec:swordy}.
@@ -62,7 +62,7 @@ the extensive air showers (see~\cref{sec:showers}). For that, large arrays of de
 are used and their areas can vary substantially depending on the energy range they are
 intended to be sensitive. As an example, the KASCADE experiment~\cite{\KASCADEPaper}
 is designed to measure particles from around \e{14} to \E{16}
-and it has an area of 4000 m$^2$, while Pierre Auger
+and it has an area of 4000 m$^2$, while the Pierre Auger
 Observatory~\cite{\AugerPaper} has an area of 3000 km$^2$ to measure particles above \E{18}.
 
 
@@ -76,8 +76,8 @@ the index changes from $\gamma\approx 2.7$ to $3.0$. Increasing the energy, the 
 the so-called \emph{second-knee}, around \E{17}, where there is a further steepening
 and the index goes to $\gamma\approx 3.3$. The spectrum then becomes harder again
 at the \emph{ankle}, around $5\times\E{18}$, where the index changes to $\gamma\approx 2.6$.
-The final feature occurs at the highest energies, above $4\E{19}$, where the
-value of the spectral index becomes very high ($>4$), characterizing the so-called
+The final feature occurs at the highest energies, above $4\times\E{19}$, where the
+value of the spectral index becomes very high ($\gamma>4$), characterizing the so-called
 \emph{suppression}.
 
 
@@ -119,8 +119,8 @@ of the cosmic rays composition. Particularly in the energy region comprehending
 the first and second-knee, very efficient composition measurements were performed
 by KASCADE~\cite{\KASCADEPaper} and KASCADE-Grande~\cite{\KASCADEGrandePaper} experiments.
 By using an experimental setup
-which includes surface detectors able to measured both number of charged particles and
-number of muons in air showers, it was possible to measure the all particle spectrum
+which includes surface detectors able to measure both the number of charged particles and
+the number of muons in air showers, it was possible to measure the all particle spectrum
 as well as to infer the spectra of individual groups of particles.
 Results of both experiments are shown in~\cref{fig:uhecr:overview:spec:kascade}
 where the plots on the top show spectra measurements from KASCADE~\cite{Antoni:2005wq}
@@ -160,7 +160,7 @@ Although the rigidity dependent suppression as an explanation for the first-knee
 was a known hypothesis since suggested by Peters, in 1961~\cite{Peters1961},
 the actual explanation is still a matter of discussion. The most simple
 model would assume that the suppression is a consequence of the 
-maximum reachable energy by the sources~\cite{Gaisser:2013bla}.  
+maximum attainable energy by the sources~\cite{Gaisser:2013bla}.  
 Alternative models include explanations based on the effect of the
 drifting of cosmic rays in the galactic magnetic field~\cite{Ptuskin1993,Candia:2002qd}
 and on the escape of cosmic rays from the galaxy~\cite{Giacinti:2014xya}.
@@ -192,7 +192,7 @@ called \emph{second order Fermi mechanism}.
 
 A similar but more efficient mechanism was developed almost
 two decades later~\cite{Axford1977,Krymsky1977,Bell:1978zc,Blandford:1978ky}.
-The main idea now is that charged particles collide with multiple shock waves
+The main idea of this mechanism is that charged particles collide with multiple shock waves
 and they gain energy by interacting with irregularities in the magnetic field.
 The average energy gain is $\Delta E/E\sim \beta$ and again a power law energy
 spectrum can be derived. The obtained spectral index is $\gamma=2-2.3$, which means that
@@ -206,13 +206,13 @@ in Ref.~\cite{Drury:1983zz}.
 
 The list of astrophysical objects usually considered as possible
 acceleration sites for cosmic rays includes neutron stars,
-active galactic nuclei (AGN), gamma ray burst (GRB)
+active galactic nuclei (AGN), gamma ray bursts (GRB)
 and others. A review of the candidates
 for sources of cosmic rays can be found in Ref.~\cite{Torres:2004hk}.
 Independently of the details of the acceleration mechanisms in different
 types of astrophysical environments, it is possible to estimate the maximum energy
 at which a certain type of object is able to accelerate particles. This was first done
-by Hillas~\cite{Hillas1984} and the idea is simply consider that
+by Hillas~\cite{Hillas1984} and the idea is simply to consider that
 the Larmor radius of the particles must be smaller than the size of the site
 in which they are confined to be accelerated.
 As a result one obtain 
@@ -222,7 +222,7 @@ As a result one obtain
 where $\beta$ is the typical velocity of the shock waves in units of $c$, $Z$ is the charge
 of the particles, $B$ is the magnetic field and $L$ is the typical size of the site.
 The graphical illustration of this relation showing the astrophysical objects
-in a plane of their size \emph{vs} their magnetic field is traditionally called \emph{Hillas plot}
+in a plane of their size \emph{vs} their magnetic field is traditionally called \emph{Hillas plot}.
 We show one version of it, focused on the candidate sources of UHECRs,
 in~\cref{fig:uhecr:overview:hillas}.
 The diagonal lines show the lower limits to accelerate protons and iron nuclei
@@ -250,8 +250,8 @@ they are not accelerated by astrophysical objects, but instead they are the prod
 of the decay of exotic super-massive particles. The origin of these exotic particles
 could be, for example, topological defects from early Universe phase transitions
 of dark matter. As a prediction of nearly all these models, a significant flux of
-ultra-high energy photons should be observed. However, measurements
-of Pierre Auger Observatory have shown that the actual flux is significantly lower than
+ultra-high energy photons should be observed. However, measurements  
+of Pierre Auger Observatory have shown that the upper limits of the photon flux is significantly lower than
 the predictions~\cite{Aglietta:2007yx} and, therefore, the top-down hypothesis can be ruled out.
 A review of the top-down models can be found in Ref.\cite{Olinto2000}.  
 
@@ -266,7 +266,7 @@ of interaction processes during their propagation from the source to the Earth a
 the consequent energy losses have a large influence on the measured
 energy spectrum and composition.
 Four interaction processes take place: photopion production, electron pair production,
-photodisintegration and adiabatic losses due to the expanse of the universe.
+photodisintegration and adiabatic losses due to the expansion of the universe.
 Since the latter affects equally all types of particles with no dependence on
 their energy, its influence on the energy spectra is the less relevant of all.
 Concerning the other three remaining processes, it is helpful to
@@ -292,7 +292,7 @@ as a function of its energy.
 \end{figure}
 
 The photopion production process (indicated by orange curves in~\cref{fig:uhecr:propagation:attenuation})
-occur because of the interaction of cosmic ray particle with photons
+occurs mainly because of the interaction of the cosmic ray particle with photons
 from the cosmic microwave background (CMB). For protons, the processes that take place are
 $p+\gamma\rightarrow p + \pi^0$ and $p+\gamma\rightarrow n+ \pi^+$, in which
 the energy threshold is given by the condition that the center-of-mass energy 
@@ -310,7 +310,7 @@ $5\times\E{19}$.
 
 It can be seen that the combined effect of these two processes,
 photopion production and electron pair production,
-on the energy spectrum of cosmic rays composed purely by proton
+on the energy spectrum of cosmic rays composed purely by protons
 can generate two evident features, a dip at $E\approx 5\times\E{18}$
 and a sharp suppression above $E\approx 5\times\E{19}$, that
 can explain the two features actually observed at the UHECR spectrum,
@@ -353,8 +353,7 @@ This means that they can interact with photons from the extragalactic background
 and be broken into lighter nuclei. In~\cref{fig:uhecr:propagation:attenuation} it is also
 shown the energy loss due to this process for iron nuclei. 
 One can see that photodisintegration dominates the energy losses over
-electron pair production or photopion production at energies at nearly all the
-energies.
+electron pair production or photopion production at all the energies.
 Because of photodisintegration, the resultant effect of the propagation of a
 combination of different nuclei on the energy spectrum
 turns to be more complicated to evaluate than in the proton case. However,
@@ -451,9 +450,9 @@ to explain it are the GZK effect (see~\cref{sec:uhecr:overview:propagation})
 and the limit of the acceleration power by the sources. While the GZK hypothesis
 require a composition dominated by protons at the highest energies, the source limit
 would imply in a rigidity dependent suppression and consequently an increasingly heavier
-composition as the energy increase. Similarly to what happened to the dip model
+composition as the energy increases. Similarly to what happened to the dip model
 interpretation of the ankle, the composition measurements by HiRes
-supported the GZK hypothesis for many year,
+supported the GZK hypothesis for many years,
 which was also changed after the \xmax measurements by Pierre Auger Observatory were published. 
 
 Many scenarios which propose to explain the UHECR spectrum and composition
@@ -478,9 +477,9 @@ of the fit by using the hadronic interaction model \EposLHCLong~\cite{\EposLHCPa
 to predict the \xmax distributions. The hypothesis of the limit of the acceleration power
 by the sources as the reason of the suppression is favored by the results of this analysis.
 However, the lack of information about the composition given by the \xmax measurements
-at energies above $4\times\E{19}$ is a limiting factor for this type analysis, since the
+at energies above $4\times\E{19}$ is a limiting factor for this type of analysis, since the
 spectrum is measured up to above \E{20}. Therefore, precise composition measurements
-at the highest energies is a requirement to refine the interpretation
+at the highest energies are a requirement to refine the interpretation
 of the end of the cosmic ray spectrum. 
 
 %%%%%%%%%%%%%% COMBINED FIT %%%%%%%%%%%%%%%
@@ -513,7 +512,7 @@ It is located near the town of Malargue, Argentina,
 and its total area is approximately 3000 km$^2$.
 The average altitude of the experiment is 1420 m, which
 corresponds to a vertical atmospheric depth of approximately 880 g/cm$^2$.
-The construct of the observatory started in 2002 and finished in 2008.
+The construction of the observatory started in 2002 and finished in 2008.
 Its hybrid detection system, which combines a large surface detector 
 and a set of fluorescence telescopes, is one of the most important experimental features
 of the observatory. A detailed overview of the experiment
@@ -530,7 +529,7 @@ can be found in Ref.~\cite{\AugerPaper}.
   \caption{Configuration of the Pierre Auger Observatory. The black dots represent
     stations of the standard surface detector, the gray dots represent the AMIGA stations
     and the blue and red lines indicate the
-    field of view of each telescopes which compose the fluorescence detector.
+    field of view of each telescope which compose the fluorescence detector.
     The atmospheric monitoring devices (XLF, CLF and BLF) are represented by
     red dots. The blue circle show the approximate area of the AERA setup.}
   \label{fig:uhecr:auger:array}
@@ -547,7 +546,7 @@ including the stations of the SD array indicated by black dots.
 Each WCD consists of a cylindrical tank with a diameter of 3.6 m,
 filled with 12 m$^3$ of ultra-high purity water, up to a height of 1.2 m. The particle
 detection is done by collecting the Cherenkov light produced by the passage of charged
-particle through the water. For that, three photomultiplier tube (PMT) are installed
+particle through the water. For that, three photomultiplier tubes (PMT) are installed
 on the top of each station and their signal are extracted and digitized using
 flash analog-to-digital converters (FADC)
 with a sampling rate of 40 MHz. Since the SD operation does not
@@ -699,10 +698,10 @@ UHECRs. Two of these results are worthwhile mentioning:
 a large scale dipolar anisotropy
 of $\sim 6\%$ found for energies above $8\times \E{18}$~\cite{Aab:2017tyv}
 and evidences of anisotropy in the arrival directions
-of cosmic rays with $E>E{19}$ which indicates correlation with
+of cosmic rays with $E>\E{19}$ which indicates correlation with
 nearby extragalactic sources~\cite{Aab:2018chp}. Even though these recent results
 represent a great progress on the understanding of the nature and origin
-of UHECRs, the main questions remain still opened.
+of UHECRs, some of the main questions remain still opened.
 
 An important piece of information to be provided experimentally that
 is still missing is the mass composition of cosmic rays above $3 \times \E{19}$.
